Removed double tap to zoom globally, fixed blue text on buttons on mobile

--- a/src/app.css
+++ b/src/app.css
@@ -105,6 +105,7 @@ body {
     border: none;
     font-family: var(--main-font);
     font-size: 2.5rem;
+    color: black;
 }
 
 
